--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@
 						<li>Verser le glaçage dans une poche puis découpez le bout de façon à avoir une petite ouverture. Vous pouvez ensuite décorer vos biscuits comme vous le souhaitez. </li>
 					</ol>
     ` 
-			},
-            20: { type: 'decorate' },
+			}, // OK NE PAS TOUCHER
+            20: { type: 'decorate' }, // OK NE PAS TOUCHER
             21: { type: 'text', content: 'C\'est bientôt la veille ! 🎅' },
             22: { type: 'text', content: 'Plus que 3 jours avant noël ! 🎄' },
             23: { type: 'text', content: 'Les jours approchent ! ' },
