--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
 						</div>
             
 						<div style="background: #f4e4c1; color: #3a2a1a; padding: 20px; border-radius: 10px; margin: 20px 0;">
-							<h3 style="margin-bottom: 15px;">🔑 Indice : Chiffre de César</h3>
+							<h3 style="margin-bottom: 15px;">🔑 Indice : Miam Miam  "10"</h3>
 							<p style="margin-bottom: 10px;">Chaque lettre a été décalée dans l'alphabet.</p>
 							<p style="font-size: 0.9em; font-style: italic;">Exemple : A → D, B → E, C → F...</p>
                 
