--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 			}, // OK NE PAS TOUCHER
             8: { type: 'image', content: 'https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExYnd1bXFybWhvOXpucWppNXZlOGFjMXVndTM0dHhxOXlsdHBmempnZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/WmkqburJqXziM/giphy.gif' }, // OK NE PAS TOUCHER
             9: { type: 'youtube', content: 'https://www.youtube.com/embed/27JZMgLZjj0' }, // OK NE PAS TOUCHER
-            10: { type: 'text', content: 'Des petits gâteaux de Noël sont cachés derrière la télévision de la salle de réunion🍰' }, // OK NE PAS TOUCHER
+            10: { type: 'image', content: 'https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExeTRoN3U4dTUzOW14bWIyNHd4ZWoyc2VncTRtOWo1bmh2c2duYzVjYiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/U0UB0Q7a6670Q/giphy.gif' }, // OK NE PAS TOUCHER
             11: { 
 				type: 'text', 
 				content: `
