--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
 							},
 							{
 								question: "5. Qui est le meilleur parmi les personnes suivantes:",
-								answers: ["David", "David", "David", "David"],
+								answers: ["David", "Laurent", "Tristan", "Moi"],
 								correct: -1, // Pas de bonne réponse!
 								trollMessage: "Bande de coquins, bien tenté(e)s.... La bonne réponse était .... :)"
 							}
