--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
 						if (userSequence.length === sequence.length) {
 							const correct = sequence.every((n, i) => n === userSequence[i]);
 							if (correct) {
-								msg.textContent = '🎶 Bravo ! Tu as rejoué "Jingle Bells" ! 🎅';
+								msg.textContent = '🎶 Bravo ! Tu as rejoué(e)s "Jingle Bells" ! 🎅';
 							} else {
 								msg.textContent = 'Essaie encore !';
 							}
