--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
 				modalBody.innerHTML = `
 					<div class="bells-container">
 						<h2 style="color:#ffd700; text-align:center; margin-bottom:20px;">🔔 Jeu musical de Noël 🔔</h2>
-						<p style="text-align:center; color:white; margin-bottom:15px;">Clique sur les cloches pour rejouer la mélodie "Jingle Bells" 🎶</p>
+						<p style="text-align:center; color:white; margin-bottom:15px;">Cliques sur les cloches pour rejouer la mélodie "Jingle Bells" 🎶</p>
 						<div class="bells-grid">
 							<button class="bell" data-note="C">🔔</button>
 							<button class="bell" data-note="D">🔔</button>
